# Repo2RLEnv

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: banner.html
docs/: AGENTS.md  API.md  AUTH.md  README.md  SPEC.md  quickstart.md
docs/contributing/: ADDING_A_PIPELINE.md
docs/pipelines/: README.md  code_instruct.md  commit_mining.md  commit_runtime.md  cve_mining.md  cve_patches.md  equivalence_tests.md  live_pr_mining.md  mutation.md  mutation_bugs.md  oss_instruct.md  pr_diff.md  pr_mining.md  pr_mining_lite.md  pr_runtime.md  pr_stream.md  refactor_synthesis.md
docs/reference/: AGENTS.md  API.md  BOOTSTRAP.md  ENV.md  SPEC.md
src/repo2rlenv/: __init__.py  auth.py  cli.py  config.py  github.py  hub.py  llm.py  reward.py
src/repo2rlenv/emitter/: __init__.py  harbor.py
src/repo2rlenv/pipelines/: __init__.py  base.py  code_instruct.py  commit_runtime.py  cve_patches.py  equivalence_tests.py  mutation_bugs.py  pr_diff.py  pr_mining_lite.py  pr_runtime.py  pr_stream.py  refactor_synthesis.py
src/repo2rlenv/spec/: __init__.py  input.py  options.py
src/repo2rlenv/ui/: __init__.py
tests/: test_auth.py  test_bootstrap_spec.py  test_e2e_private.py  test_e2e_public.py  test_emitter.py  test_pipeline_contract.py  test_reward.py  test_spec.py
